// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button sc-gzVnrw jDKWag"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button when urgent 1`] = `
<button
  className="Button sc-gzVnrw feGryx"
  onClick={[Function]}
>
  Cancel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button sc-gzVnrw jDKWag"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Card Simple card example 1`] = `
<div
  className="sc-bdVaJa iYZZDf"
  style={undefined}
>
  <p>
    Hey there!
  </p>
</div>
`;

exports[`Storyshots Divider Simple example 1`] = `
<div
  className="sc-bwzfXH bkvAHx"
  style={undefined}
>
  <strong
    className="sc-htpNat ccgpGb"
  >
    Or
  </strong>
</div>
`;

exports[`Storyshots HeroImage Simple hero image 1`] = `
<div
  className="sc-EHOje jwLGqq"
>
  <div
    className="sc-ifAKCX gMmqOp"
  >
    <div
      className="sc-bxivhb cAaJnm"
    />
    <div
      className="sc-bZQynM eRcMnp"
    >
      flume
    </div>
  </div>
</div>
`;
